Fix: align assets table

--- a/src/components/transactions/TxDetails/styles.module.css
+++ b/src/components/transactions/TxDetails/styles.module.css
@@ -33,7 +33,7 @@
   margin-left: calc(var(--space-2) * -1);
   margin-right: calc(var(--space-2) * -1);
   padding: var(--space-2);
-  padding-top: var(--space-3)
+  padding-top: var(--space-3);
 }
 .txData,
 .swapOrder {
